[gd_scene load_steps=5 format=3 uid="uid://bpi2fetqknkoa"]

[ext_resource type="Script" path="res://scripts/mirror_enemy.gd" id="1_lh008"]
[ext_resource type="Texture2D" uid="uid://8464ps5tgijd" path="res://icon.svg" id="2_i2xkj"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xqlsw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_i2xkj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_nu4d6"]

[node name="MirrorEnemy" type="Node3D"]
script = ExtResource("1_lh008")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
sprite_frames = SubResource("SpriteFrames_xqlsw")

[node name="DetectionArea" type="Area3D" parent="AnimatedSprite3D"]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="AnimatedSprite3D/DetectionArea"]
shape = SubResource("BoxShape3D_nu4d6")

[node name="SphereVisual" type="MeshInstance3D" parent="."]

[node name="CutoffRing" type="MeshInstance3D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="AnimatedSprite3D/DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
